Lisätty opintopisteet sekä tieto kurssin tilasta näkymään aktiiviset kurssit näkymään

--- a/Lintukoto-sovellus/src/app/aktiiviset-kurssit/aktiiviset-kurssit.component.css
+++ b/Lintukoto-sovellus/src/app/aktiiviset-kurssit/aktiiviset-kurssit.component.css
@@ -130,3 +130,12 @@ body {
 .icon-linkki-edit:hover {
   color: #007bff;
 }
+
+.hidden {
+  position: absolute;
+  left: -10000px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+}
