--- a/Lintukoto-sovellus/src/app/kirjautuminen/kirjautuminen.component.html
+++ b/Lintukoto-sovellus/src/app/kirjautuminen/kirjautuminen.component.html
@@ -5,7 +5,13 @@
     Pääset sovellukseen kirjautumalla henkilökohtaisella käyttäjätunnuksella ja
     salasanalla.
   </p>
-  <img src="../../assets/images/LOGO_ilman_taustaa.png" id="lintukoto_logo" alt="Lintukoto-sovelluksen logo"/>
+  <div class="kuva">
+    <img
+      src="../../assets/images/LOGO_ilman_taustaa.png"
+      id="lintukoto_logo"
+      alt="Lintukoto-sovelluksen logo"
+    />
+  </div>
 </div>
 <!--Sisäänkirjautumisen lomake-->
 <div class="login">
@@ -31,7 +37,5 @@
     <button class="btn btn-primary" type="submit" id="submit-btn">
       Lähetä
     </button>
-
   </form>
-
 </div>
