--- a/Lintukoto-sovellus/src/app/pesa/pesa.component.html
+++ b/Lintukoto-sovellus/src/app/pesa/pesa.component.html
@@ -2,12 +2,6 @@
   <div class="grid-container">
     <div class="otsikkoTaso">
       <h1 class="otsikko margin">Henkipöllön pesä</h1>
-      <div class="taulukuva">
-        <img
-        src="../../assets/images/taulu_untuvikolla.svg"
-        id="taulu_untuvikosta_kuva" alt="taulukuva untuvikkosta pöllöstä"
-      />
-      </div>
       <p class="otsikko margin">
         Tervetuloa Henkipöllön pesään!<br />
         Henkipöllö on nähnyt yhtä ja toista vuosien saatossa ja hän on koonnut
@@ -15,6 +9,13 @@
         Tutustu hänen oppeihinsa täällä ja muista, että kysyvä ei tieltä eksy.
         Aina kannattaa pyytää apua jos vähääkään siltä tuntuu.
       </p>
+    </div>
+    <div class="taulukuva">
+      <img
+        src="../../assets/images/taulu_untuvikolla.svg"
+        id="taulu"
+        alt="taulukuva untuvikkosta pöllöstä"
+      />
     </div>
     <div class="listat margin">
       <div class="apuaOpintoihin">
@@ -67,7 +68,8 @@
     <div class="kuva">
       <img
         src="../../assets/images/Henkipollo_pesassa.svg"
-        id="henkipollo_kuva" alt="kuva Henkipöllöstä"
+        id="henkipollo_kuva"
+        alt="kuva Henkipöllöstä"
       />
     </div>
   </div>
