--- a/Lintukoto-sovellus/src/app/pesa/pesa.component.css
+++ b/Lintukoto-sovellus/src/app/pesa/pesa.component.css
@@ -1,19 +1,18 @@
 html {
-  height: 100vh;
+  height: auto;
 }
 body {
   background: url("../../assets/images/tapettihuone.png");
   background-position: center;
-  background-repeat: repeat-y;
+  background-repeat: repeat;
   padding-top: 2em;
   padding-bottom: 2em;
-
+  height: auto;
 }
 .margin {
   margin: 20px;
 }
 #taulu {
-
   height: auto;
   width: 80px;
   margin-top: 30px;
