Tehtävän manuaalinen lisäys korjattu toimimaan

--- a/Lintukoto-sovellus/src/app/aktiiviset-kurssit/aktiiviset-kurssit.component.html
+++ b/Lintukoto-sovellus/src/app/aktiiviset-kurssit/aktiiviset-kurssit.component.html
@@ -175,7 +175,7 @@
               (click)="open(tehtavamodal, tehtava)"
               class="tehtava-linkki"
             >
-              {{ tehtava }}
+              {{ tehtava.tehtava }}
             </a>
           </div>
         </div>
@@ -381,7 +381,7 @@
       </div>
       <!-- Modal 2 body -->
       <div class="modal-body">
-        <p ngbAutofocus>{{ tehtava }}</p>
+        <p ngbAutofocus>{{ tehtava.tehtava }}</p>
       </div>
 
       <!-- Modal footer -->
