Lisatty myos deadline nakymaan kayttajalle

--- a/Lintukoto-sovellus/src/app/aktiiviset-kurssit/aktiiviset-kurssit.component.css
+++ b/Lintukoto-sovellus/src/app/aktiiviset-kurssit/aktiiviset-kurssit.component.css
@@ -139,3 +139,13 @@ body {
   height: 1px;
   overflow: hidden;
 }
+
+.rivitys {
+  display: inline;
+  padding-left: 1em;
+}
+
+.boldaus {
+  display: inline;
+  font-weight: bold;
+}
