--- a/Lintukoto-sovellus/src/app/asetukset/asetukset.component.html
+++ b/Lintukoto-sovellus/src/app/asetukset/asetukset.component.html
@@ -91,9 +91,10 @@
           >Haluan nämä Henkipöllön ominaisuudet:</label
         ><br />
         <div>
-          <label class="form-check-label labeli" for="henkipolloOpinnot"
-            ></label
-          >
+          <label
+            class="form-check-label labeli"
+            for="henkipolloOpinnot"
+          ></label>
           <input
             type="checkbox"
             [(ngModel)]="asetuksetLadattu.asetukset.henkipolloOpinnot"
@@ -105,9 +106,7 @@
         </div>
         <!-- Opinnot<br /> -->
         <div>
-          <label class="form-check-label labeli" for="henkipolloElama"
-            ></label
-          >
+          <label class="form-check-label labeli" for="henkipolloElama"></label>
           <input
             type="checkbox"
             [(ngModel)]="asetuksetLadattu.asetukset.henkipolloElama"
@@ -119,9 +118,10 @@
         </div>
         <!-- Elämänhallinta<br /> -->
         <div>
-          <label class="form-check-label labeli" for="henkipolloValistus"
-            ></label
-          >
+          <label
+            class="form-check-label labeli"
+            for="henkipolloValistus"
+          ></label>
           <input
             type="checkbox"
             [(ngModel)]="asetuksetLadattu.asetukset.henkipolloValistus"
