fixattu deadlinet Date muotoon, jotta helpmpi laittaa kalenteriin myöhemmin

--- a/Lintukoto-sovellus/src/app/aktiiviset-kurssit/aktiiviset-kurssit.component.html
+++ b/Lintukoto-sovellus/src/app/aktiiviset-kurssit/aktiiviset-kurssit.component.html
@@ -347,7 +347,9 @@
         <p ngbAutofocus>{{ tehtava.tehtava }}</p>
         <div *ngIf="tehtava.deadline">
           <p class="boldaus">Deadline:</p>
-          <p class="rivitys">{{ tehtava.deadline }}</p>
+          <p class="rivitys">
+            {{ tehtava.deadline | date: "d.M.yyyy, H:mm" }}
+          </p>
         </div>
       </div>
 
