--- a/Lintukoto-sovellus/src/app/modal/modal.component.html
+++ b/Lintukoto-sovellus/src/app/modal/modal.component.html
@@ -142,7 +142,7 @@
           <input name="tehtava" class="modal-input" placeholder="Tehtävä" />
 
           <label for="deadline" class="labelit"> Deadline</label>
-          <input name="deadline" class="modal-input" placeholder="Deadline" />
+          <input type="datetime-local" name="deadline" class="modal-input" />
 
           <input type="text" [value]="kayttajatunnus" hidden name="tunnus" />
           <button
