--- a/Lintukoto-sovellus/src/app/asetukset/asetukset.component.html
+++ b/Lintukoto-sovellus/src/app/asetukset/asetukset.component.html
@@ -21,7 +21,7 @@
           id="datefield"
           min="1990-01-01"
           max="2020-05-05"
-          [(ngModel)]="asetuslomake.aloituspaiva"
+          [(ngModel)]="asetuksetLadattu.asetukset.aloituspaiva"
           name="aloituspaiva"
           class="form-control"
           [value]="asetuksetLadattu.asetukset.aloituspaiva"
@@ -32,7 +32,7 @@
         <label class="bold" for="ryhmatunnus">Ryhmätunnus</label><br />
         <input
           type="text"
-          [(ngModel)]="asetuslomake.ryhmatunnus"
+          [(ngModel)]="asetuksetLadattu.asetukset.ryhmatunnus"
           class="form-control"
           name="ryhmatunnus"
           [placeholder]="asetuksetLadattu.asetukset.ryhmatunnus"
@@ -48,7 +48,7 @@
           type="number"
           min="0"
           max="800"
-          [(ngModel)]="asetuslomake.kokonaisOp"
+          [(ngModel)]="asetuksetLadattu.asetukset.kokonaisOp"
           class="form-control"
           name="kokonaisOp"
           [placeholder]="asetuksetLadattu.asetukset.kokonaisOp"
