Piilotettu valikon linkit sisäänkirjautumattomilta

--- a/Lintukoto-sovellus/src/app/navbar/navbar.component.html
+++ b/Lintukoto-sovellus/src/app/navbar/navbar.component.html
@@ -17,6 +17,7 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a
+          *ngIf="router.url !== '/kirjautuminen' && router.url !== '/'"
           class="nav-item nav-link active"
           routerLink="/kalenteri"
           routerLinkActive="router-link-active"
@@ -24,12 +25,14 @@
         >
 
         <a
+          *ngIf="router.url !== '/kirjautuminen' && router.url !== '/'"
           class="nav-item nav-link white"
           routerLink="/aktiiviset"
           routerLinkActive="router-link-active"
           >Aktiiviset kurssit</a
         >
         <a
+          *ngIf="router.url !== '/kirjautuminen' && router.url !== '/'"
           class="nav-item nav-link white"
           routerLink="/suoritetut"
           routerLinkActive="router-link-active"
@@ -37,6 +40,7 @@
         >
 
         <a
+          *ngIf="router.url !== '/kirjautuminen' && router.url !== '/'"
           class="nav-item nav-link white"
           routerLink="/pesa"
           routerLinkActive="router-link-active"
@@ -44,6 +48,7 @@
         >
 
         <a
+          *ngIf="router.url !== '/kirjautuminen' && router.url !== '/'"
           class="nav-item nav-link white"
           routerLink="/asetukset"
           routerLinkActive="router-link-active"
@@ -51,7 +56,7 @@
         >
 
         <a
-          class="nav-item nav-link white"
+          class="nav-item nav-link white rightf"
           *ngIf="!authService.loggedIn"
           routerLink="/kirjautuminen"
           routerLinkActive="router-link-active"
@@ -59,7 +64,7 @@
         >
 
         <a
-          class="nav-item nav-link white"
+          class="nav-item nav-link white rightf"
           *ngIf="authService.loggedIn"
           (click)="authService.logout()"
           [routerLink]="['/']"
