kommentoitu ja siistitty koodia, poistettu turhaa koodia

--- a/Lintukoto-sovellus/src/app/navbar/navbar.component.html
+++ b/Lintukoto-sovellus/src/app/navbar/navbar.component.html
@@ -67,7 +67,7 @@
           class="nav-item nav-link white rightf"
           *ngIf="authService.loggedIn"
           (click)="authService.logout()"
-          [routerLink]="['/']"
+          [routerLink]="['/kirjautuminen']"
           >Kirjaudu ulos</a
         >
       </div>
