--- a/Lintukoto-sovellus/src/app/modal/modal.component.html
+++ b/Lintukoto-sovellus/src/app/modal/modal.component.html
@@ -125,27 +125,71 @@
       <!-- Modal body -->
       <div class="modal-body">
         <form
+          #f="ngForm"
           (submit)="submit()"
           method="POST"
           action="http://localhost:3000/tehtavanLisays"
         >
           <div class="select-container">
             <label for="kurssi" class="labelit"> Kurssi</label>
-            <select name="kurssi" class="form-control nimi-selecti">
-              <option *ngFor="let kurssi of kurssit2[0].aktiiviset_kurssit">{{
-                kurssi.nimi
-              }}</option>
+            <select
+              name="kurssi"
+              ngModel
+              required
+              class="form-control nimi-selecti"
+            >
+              <option value="" disabled selected>Valitse kurssi</option>
+              <option
+                required
+                id="kurssi"
+                *ngFor="let kurssi of kurssit2[0].aktiiviset_kurssit"
+                >{{ kurssi.nimi }}</option
+              >
             </select>
           </div>
+          <p
+            *ngIf="!f.controls.kurssi.valid && !f.controls.kurssi.untouched"
+            class="varoitus"
+          >
+            Tehtävä kenttä ei voi olla tyhjä!
+          </p>
 
           <label for="tehtava" class="labelit"> Tehtava</label>
-          <input name="tehtava" class="modal-input" placeholder="Tehtävä" />
+          <input
+            name="tehtava"
+            id="tehtava"
+            ngModel
+            class="modal-input"
+            placeholder="Tehtävä"
+            required
+          />
+          <p
+            *ngIf="!f.controls.tehtava.valid && !f.controls.tehtava.untouched"
+            class="varoitus"
+          >
+            Tehtävä kenttä ei voi olla tyhjä!
+          </p>
 
           <label for="deadline" class="labelit"> Deadline</label>
-          <input type="datetime-local" name="deadline" class="modal-input" />
+          <input
+            type="datetime-local"
+            name="deadline"
+            id="deadline"
+            class="modal-input"
+            min="2020-01-01T21:00"
+            ngModel
+            required
+          />
 
           <input type="text" [value]="kayttajatunnus" hidden name="tunnus" />
+          <p
+            *ngIf="!f.controls.deadline.valid && !f.controls.deadline.untouched"
+            class="varoitus"
+          >
+            Lisää sekä päivämäärä, että kellonaika.
+          </p>
           <button
+            [disabled]="!f.valid"
             type="submit"
             method="POST"
             name="tehtavaLahete"
