--- a/Lintukoto-sovellus/src/app/henkipollo/henkipollo.component.html
+++ b/Lintukoto-sovellus/src/app/henkipollo/henkipollo.component.html
@@ -45,8 +45,8 @@
       </button>
       <button
         type="button"
-        id="close-modal"
-        data-dismiss="modal"
+        id="close-modalsivu"
+        data-dismiss="modalsivu"
         style="display: none"
       >
         Close
