Korjattu sovelluksen paikalliskopiota siten, että se käynnistyy. Vika ei ollutkaan kirjautuminen.component.html-tiedostossa vaan aktiisivset-kurssit.component.html-tiedostossa, josta olin ottanut pois kommenttimerkit eräästä div-elementistä, jossa oli otsikkotason h1 otsikko. Lisäksi lisätty kirjautuminen-sivuun (kirjautuminen.component.html) label-elementteihin saavutettavuutta parantavia tekstejä.

--- a/Lintukoto-sovellus/src/app/suoritetut-kurssit/suoritetut-kurssit.component.html
+++ b/Lintukoto-sovellus/src/app/suoritetut-kurssit/suoritetut-kurssit.component.html
@@ -10,9 +10,9 @@
   </head>
   <body>
 <!-- En Ymmärrä, miksi div-elementti oli kommentteissa. Ajattelin poistaa siitä kommenttit, koska nyt se toimii kunnolla. Selvitän asian myöhemmin.
-    <div class="otsikko">
+<!--     <div class="otsikko">
       <h1 class="otsikkotext">Suoritetut Kurssit</h1>
-    </div> 
+    </div> -->
     <div class="kurssityht">
       <h5 class="otsikkotext">Opintopisteet yhteensä: {{ kurssityht }}</h5>
     </div>
