Tehtavien tehdyksi merkkaus lisatty

--- a/Lintukoto-sovellus/src/app/henkipollo/henkipollo.component.html
+++ b/Lintukoto-sovellus/src/app/henkipollo/henkipollo.component.html
@@ -31,7 +31,7 @@
       <button
         class="btn btn-success nappula"
         routerLink="/pesa"
-        (click)="hideModalpollo()"
+        (click)="hideModal()"
       >
         Henkipöllön pesä
       </button>
@@ -45,13 +45,8 @@
       </button>
       <button
         type="button"
-<<<<<<< HEAD
-        id="close-modalsivu"
-        data-dismiss="modalsivu"
-=======
         id="close-modalpollo"
         data-dismiss="modal"
->>>>>>> c12ee1d8e0dd915885f3608ef792b18d32017649
         style="display: none"
       >
         Close
