--- a/Lintukoto-sovellus/src/app/aktiiviset-kurssit/aktiiviset-kurssit.component.css
+++ b/Lintukoto-sovellus/src/app/aktiiviset-kurssit/aktiiviset-kurssit.component.css
@@ -97,7 +97,7 @@ h6 {
   margin: 1em 1.5em;
 }
 body {
-  background-color: #335164;
+  background-image: url("../../assets/images/pelkka_tapetti.png");
 }
 
 .modal-textarea {
