--- a/Lintukoto-sovellus/src/app/aktiiviset-kurssit/aktiiviset-kurssit.component.html
+++ b/Lintukoto-sovellus/src/app/aktiiviset-kurssit/aktiiviset-kurssit.component.html
@@ -125,7 +125,7 @@
             <h6>Tehdyt tehtävät</h6>
             <a
               *ngFor="let tehtava of kurssi.tehdytTehtavat"
-              (click)="open(content, tehtava.tehtava)"
+              (click)="open(tehtavamodal, tehtava)"
               class="tehtava-linkki"
             >
               {{ tehtava.tehtava }}
@@ -356,6 +356,7 @@
       <!-- Modal footer -->
       <div class="modal-footer">
         <button
+          *ngIf="!tehtava.valmis"
           class="btn btn-success"
           (click)="tehtavaValmis(tehtava.tehtava, tehtava.kurssi, tunnus)"
         >
