--- a/Lintukoto-sovellus/src/app/aktiiviset-kurssit/aktiiviset-kurssit.component.html
+++ b/Lintukoto-sovellus/src/app/aktiiviset-kurssit/aktiiviset-kurssit.component.html
@@ -45,6 +45,13 @@
           </p>
           <h5>{{ kurssi.nimi }}</h5>
           <h5>({{ kurssi.opintopisteet }}op)</h5>
+          <button
+            class="btn btn-success"
+            *ngIf="kurssi.uudetTehtavat.length == 0"
+            (click)="openKurssiSuoritettu(kurssiSuoritettu, kurssi)"
+          >
+            Kurssi suoritettu
+          </button>
           <div id="muistiinpanolista">
             <h6>Muistiinpanot</h6>
             <div *ngFor="let muistio of kurssi.muistiinpanot">
@@ -361,6 +368,53 @@
           (click)="tehtavaValmis(tehtava.tehtava, tehtava.kurssi, tunnus)"
         >
           Merkkaa tehdyksi <i class="fa fa-check"></i>
+        </button>
+        <button
+          type="button"
+          class="btn btn-danger"
+          (click)="modal.dismiss('Cross click')"
+        >
+          Sulje
+        </button>
+
+        <!-- this button is hidden, used to close from typescript -->
+        <button
+          type="button"
+          id="close-modal2"
+          data-dismiss="modal"
+          style="display: none;"
+        >
+          Close
+        </button>
+      </div>
+    </ng-template>
+    <ng-template #kurssiSuoritettu let-modal>
+      <div class="modal-header" id="myModal2">
+        <!-- Modal Header -->
+        <h4 class="modal-title">Kurssi suoritettu</h4>
+        <button
+          type="button"
+          class="close"
+          id="muistiinpano-close-nappi"
+          (click)="modal.dismiss('Cross click')"
+        >
+          &times;
+        </button>
+      </div>
+      <!-- Modal 2 body -->
+      <div class="modal-body">
+        <p ngbAutofocus>Sait {{ modalContent.nimi }} -kurssin suoritettua!</p>
+        <p>Ansaitsit juuri {{ modalContent.opintopisteet }} opintopistettä!</p>
+        <p>Mahtavaa!</p>
+      </div>
+
+      <!-- Modal footer -->
+      <div class="modal-footer">
+        <button
+          class="btn btn-success"
+          (click)="kurssiSuoritettuh(modalContent.nimi, tunnus)"
+        >
+          OK
         </button>
         <button
           type="button"
