--- a/Lintukoto-sovellus/src/app/suoritetut-kurssit/suoritetut-kurssit.component.html
+++ b/Lintukoto-sovellus/src/app/suoritetut-kurssit/suoritetut-kurssit.component.html
@@ -18,7 +18,7 @@
     <div class="swiper-container">
       <div class="swiper-wrapper">
         <div
-          *ngFor="let kurssi of kurssit2"
+          *ngFor="let kurssi of kurssit2[0]"
           id="kurssilista"
           class="swiper-slide"
         >
