lisatty myos opintopisteiden paivitys

--- a/Lintukoto-sovellus/src/app/suoritetut-kurssit/suoritetut-kurssit.component.html
+++ b/Lintukoto-sovellus/src/app/suoritetut-kurssit/suoritetut-kurssit.component.html
@@ -13,7 +13,9 @@
       <h3 class="otsikkotext">Suoritetut Kurssit</h3>
     </div> -->
     <div class="kurssityht">
-      <h5 class="otsikkotext">Opintopisteet yhteensä: {{ kurssityht }}</h5>
+      <h5 class="otsikkotext">
+        Opintopisteet yhteensä: {{ kayttaja.opintopisteet }}
+      </h5>
     </div>
     <div class="swiper-container">
       <div class="swiper-wrapper">
